--- a/10-12-2017/bs-js.html
+++ b/10-12-2017/bs-js.html
@@ -6,6 +6,11 @@
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css" />
+
+    <script>
+        console.log("George Thuku")
+        console.log(50*20)
+    </script>
   </head>
   <body>
     <div class="container">
@@ -15,6 +20,11 @@
           <p style="color:purple" class="col-sm-6 col-md-4"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce vulputate ac risus in egestas. Mauris ut venenatis sapien. Vestibulum dolor neque, ornare malesuada congue sed, ultrices non odio. Sed mollis auctor leo, in luctus sem. Proin ultrices molestie finibus. Morbi et quam velit. Quisque luctus nibh nec magna sollicitudin, non sollicitudin ex ultrices. Nullam sed tempus diam. Mauris et nulla lacus. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Vestibulum neque tellus, vehicula vitae ornare id, sollicitudin ut libero.</p>
           <p id="para4" class="col-sm-6 col-md-4"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce vulputate ac risus in egestas. Mauris ut venenatis sapien. Vestibulum dolor neque, ornare malesuada congue sed, ultrices non odio. Sed mollis auctor leo, in luctus sem. Proin ultrices molestie finibus. Morbi et quam velit. Quisque luctus nibh nec magna sollicitudin, non sollicitudin ex ultrices. Nullam sed tempus diam. Mauris et nulla lacus. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Vestibulum neque tellus, vehicula vitae ornare id, sollicitudin ut libero.</p>
         </div >
+
           </div>
+          <script>
+              console.log("George Thuku".length)
+              console.log("hello".toUpperCase())
+          </script>
   </body>
 </html>
