fixed error in control flow

--- a/10-17-2017/js-control-flow.html
+++ b/10-17-2017/js-control-flow.html
@@ -51,7 +51,7 @@
       case (grade>=90):
       console.log("A in switch");
       break;
-      case (grade >=80)
+      case (grade >=80):
       console.log("B in switch");
       default:
       console.log("C in switch");
